--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,26 @@
   </dependencies>
   <build>
     <finalName>WebApp</finalName>
+    <plugin>  
+         <groupId>org.owasp</groupId>  
+         <artifactId>dependency-check-maven</artifactId>  
+         <version>6.0.2</version>  
+         <executions>  
+           <execution>  
+             <goals>  
+               <goal>check</goal>  
+             </goals>  
+           </execution>  
+         </executions>  
+         <configuration>  
+           <failBuildOnCVSS>7</failBuildOnCVSS>  
+           <!-- Generate all report formats -->  
+           <format>ALL</format>  
+           <!-- Don't use Nexus Analyzer -->  
+           <centralAnalyzerEnabled>false</centralAnalyzerEnabled>  
+           <!-- Am I the latest version? -->  
+           <versionCheckEnabled>true</versionCheckEnabled>  
+         </configuration>  
+       </plugin>  
   </build>
 </project>
